放弃native，切回java8